# ai-mahjong-table

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
configs/rules/: tuidaohe_v1.yaml
scripts/: run_table_smoke.py  serve_qwen_transformers_openai.py
src/mahjong_ai/: __init__.py
src/mahjong_ai/agents/: __init__.py  base.py  executor.py  llm.py  random.py
src/mahjong_ai/common/: __init__.py  action.py  errors.py  event.py  meld.py  score.py  seat.py  tile.py
src/mahjong_ai/game/: __init__.py  invariant.py  match.py  operations.py  phase.py  physical_table.py  replay.py  response_window.py  snapshot.py  state.py  table.py
src/mahjong_ai/observation/: __init__.py  builder.py  schema.py
src/mahjong_ai/rules/: __init__.py  base.py  loader.py  yaml_subset.py
src/mahjong_ai/rules/tuidaohe/: __init__.py  ruleset.py
src/mahjong_ai/walls/: __init__.py  base.py  duplicate.py
src/mahjong_ai/web/: __init__.py  app.py  schemas.py  session.py
src/mahjong_ai/web/static/: app.js  index.html  styles.css
tests/: test_operation_plan.py  test_physical_table_ops.py  test_rule_loading.py  test_table_actions.py  test_table_core_contracts.py  test_table_engine.py  test_tuidaohe_rule.py  test_web_session_api.py
